[package]
name = "woff-convert"
description = "Convert WOFF2 to and from TTF"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"

[build-dependencies]
cmake = "0.1"
num_cpus = "1"
